# gmail-mcp

./: README.md  main.py  pyproject.toml  test_cors.py
auth/: oauth_callback_server.py
core/: utils.py
gdocs/: docs_helpers.py  docs_tools.py
gdocs/managers/: batch_operation_manager.py  validation_manager.py
gmail/: gmail_tools.py
tests/gmail/: test_manage_gmail_filter.py
